package NProto;

message TArchiveZoneAttributes {
    message TZoneAttributes {
        optional string tel_code_country = 1;
        optional string tel_code_area = 2;
        optional string tel_local = 3;
        optional bytes SegSt = 4;
        optional string forum_date = 5;
        optional string forum_author = 6;
        optional string forum_anchor = 7;
        optional string quote_author = 8;
        optional string quote_url = 9;
        optional string quote_date = 10;
        optional string quote_time = 11;
        optional string forum_name = 12;
        optional string forum_link = 13;
        optional string forum_descr = 14;
        optional string forum_topics = 15;
        optional string forum_messages = 16;
        optional string forum_views = 17;
        optional string forum_last = 18;
        optional string forum_last_author = 19;
        optional string forum_last_date = 20;
        optional string xpz_type = 21;
        optional string date_value = 22;
        optional string review_author = 23;
        optional string review_date = 24;
        optional string review_norm_date = 25;
        optional string review_rate = 26;
        optional string review_title = 27;
        optional string review_usefulness = 28;
        optional string fio_len = 29;
        required uint32 Coord = 30;
    }

    required uint32 ZoneId = 1;
    repeated TZoneAttributes ZoneAttributes = 2;
}
